Fix for contrast ratio issues.

--- a/app/assets/stylesheets/partials/_permissions.scss
+++ b/app/assets/stylesheets/partials/_permissions.scss
@@ -40,7 +40,6 @@
       .dividers {
         max-width: 460px;
         margin: 0 auto;
-        color: #9B9B9B;
         font-size: 0.8em;
         font-weight: 600;
         border-bottom: 1px #EEF2F4 solid;
